# alerts

./: .env.example  .gitignore  README.md  RESEARCH_DELIVERABLES.md  a2a-protocol.skill  pyproject.toml
.claude/: CLAUDE.md
.dev-resources/architecture/: README.md  agent-event-streaming.md  smarts-alert-analyzer.md  ui-architecture.md  wash-trade-analyzer.md
.dev-resources/context/: 2025-12-03-tool-event-streaming-implementation.md  feature-review-orchestrator-agent.md  session-2025-11-29-implementation-complete.md  session-2025-12-03-frontend-implementation.md  session-2025-12-03-streaming-implementation.md  session-orchestrator-agent-implementation.md
.dev-resources/debug/: events.txt  ui-events.txt
.dev-resources/docs/: README-LANGGRAPH.md  RESEARCH-SOURCES.md  langgraph-advanced-patterns.md  langgraph-code-snippets.md  langgraph-tool-calling-agent-reference.md
.dev-resources/prompts/: agent-events.txt  architecture.txt  frontend.txt  research-a2a.txt  wash-trade.txt
resources/: alert1.xml  alert2.xml  alert3.xml  alert4.xml  alerts.xml
scripts/: start_all_servers.sh  test_frontend_api.sh
src/alerts/: __init__.py  agent.py  (+4 more)
test_data/: few_shot_examples.json  market_data.csv  market_news.txt  peer_trades.csv  trader_history.csv  trader_profiles.csv  wash_trade_few_shot_examples.json
tests/: __init__.py  conftest.py  test_a2a_executors.py  test_a2a_orchestrator.py  test_a2a_servers.py  test_config.py  test_html_generator.py  test_llm_factory.py  test_main.py  test_models.py  test_streaming_integration.py  test_tools.py  test_wash_trade_models.py
(+92 files in other folders)
